di 구현